--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -10,3 +10,8 @@
     copy:
      src: myindexpage
      dest:  /var/www/html/index.html   
+
+  - name: copy dyno files into nodes
+    template:
+    src: mydynoindex.j2
+    dest:  /var/www/html/index.html
