--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -18,6 +18,11 @@
       dest:  /var/www/html/index.
     notify: restartwebserver
 
+  - name: download internet files
+    get-url:
+      url: https://archive.apache.org/dist/tomcat/tomcat-10/v10.0.20/bin/apache-tomcat-10.0.20.tar.gz
+      dest: /home/ubuntu/apache-tomcat-10.0.20.tar.gz
+
   handlers:
   - name: restartwebserver
     service:
