--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -19,7 +19,7 @@
     notify: restartwebserver
 
   - name: download internet files
-    get-url:
+    get_url:
       url: https://archive.apache.org/dist/tomcat/tomcat-10/v10.0.20/bin/apache-tomcat-10.0.20.tar.gz
       dest: /home/ubuntu/apache-tomcat-10.0.20.tar.gz
 
