--- a/mywebroleplay.yml
+++ b/mywebroleplay.yml
@@ -2,5 +2,4 @@
 - hosts: mywebservers
   become: yes
   roles:
-  - {roles: mywebrole} 
-  when: ansible_os_family =="Debian"
+  - {roles: mywebrole ,when: ansible_os_family =="Debian"}
