--- a/mytomcatrole/tasks/main.yml
+++ b/mytomcatrole/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 # tasks file for mytomcatrole
--  inculde_tasks: myuser.yml
--  inculde_tasks: installjava.yml
--  inculde_tasks: downloadtomcat.yml
--  inculde_tasks: permissions.yml
--  inculde_tasks: tomcatDashboard.yml
--  inculde_tasks: tomservice.yml
--  inculde_tasks: tomstart.yml
+- include_tasks: myuser.yml
+- include_tasks: installjava.yml
+- include_tasks: downloadtomcat.yml
+- include_tasks: permissions.yml
+- include_tasks: tomcatDashboard.yml
+- include_tasks: tomservice.yml
+- include_tasks: tomstart.yml
 
 
 
